Added global exception handler for the api